[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonhash"
version = "0.0.1"
authors = [
  { name="Benjamin Porter", email="bcgcustomerservices@gmail.com" },
]
description = "A terrible hashing library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/HippoProgrammer3/python-hash"
Issues = "https://github.com/HippoProgrammer3/python-hash/issues"